# hl_mem

./: .env.example  .gitignore  AGENTS.md  README.md  install_to_hermes.py  pyproject.toml  start_production.bat  start_server.py
.github/workflows/: test.yml
docs/: CHANGELOG.md  HANDOFF.md  README.md  architecture.md  audit-log-design.md  implementation-plan.md  memory-management-design.md  refactor-lifecycle.md  refactor-phase1-p0.md  refactor-phase10-conflict-fix-proposal.md  refactor-phase10-conflict-fix.md  refactor-phase11-mutual-exclusivity.md  refactor-phase11-proposal.md  refactor-phase12-proposal.md  refactor-phase12-quality.md  refactor-phase13-batch1a-task.md  refactor-phase13-batch1b-task.md  refactor-phase13-batch2a-task.md  refactor-phase13-batch2b3-task.md  refactor-phase13-batch4-task.md  refactor-phase13-consensus.md  refactor-phase13-proposal.md  refactor-phase14-brief.md  refactor-phase14-proposal.md  refactor-phase2-domain.md  refactor-phase3-services.md  refactor-phase4-dependencies.md  refactor-phase5-dedup.md  refactor-phase6-maintenance.md  refactor-phase7-quality.md  refactor-phase8-hardfix.md  refactor-phase9-improvements.md  refactor-plan-v2.md
docs/adr/: 0001-core-strategy.md  0002-mvp-scope-and-embedding.md
docs/refactor/: phase15-batch1-config-llm.md  phase15-batch1-remaining-fixes.md  phase15-batch1-test-updates.md  phase15-batch2-domain-compat.md  phase15-batch3-god-functions.md  phase15-batch4-types-storage.md  phase15-batch5-cleanup.md  phase16-batch1-dedup.md  phase16-batch2-contracts.md  phase16-batch2-followup.md  phase16-batch3-hermes-cleanup.md  phase17-design.md  phase17-stage1.md  phase17-stage2.md  phase17-stage3.md  phase17-stage4.md  phase18-topic-tags.md  v0.9.0-fixes.md
docs/research/: memos-vs-hindsight.md
docs/review/: attribute-taxonomy-analysis.md  cleanup-task.md  codex-arch-review-v2-report.md  codex-arch-review-v2.md  codex-dead-code-review-report.md  codex-dead-code-review-task.md  codex-quality-review-report.md  codex-quality-review-task.md  codex-task-install-script.md  codex-task-update-docs.md  codex-task-week1.md  codex-task-week2.md  codex-task-week4.md  consensus.md  data-quality-analysis.md  external-review-assessment.md  hermes-review-feedback.md  hindsight-analysis.txt  hindsight-vs-hlmem.md  optimization-consensus.md  phase17-review.md  push-readiness.md  round1-hermes-review.md  round3-embedding-revision.md  second-review-assessment.md  trigram-review.md  (+4 more)
scripts/: __init__.py  analyze_deep.py  analyze_quality.py  check_embedder.py  clean_disputed_claims.py  cleanup_data.py  cleanup_data_v2.py  diagnose_chinese.py  extract_hindsight.py  test_chinese_embedding.py
tests/: __init__.py  conftest.py  e2e_real.py  test_e2e_real.py  test_reranker.py
(+222 files in other folders)
