[project]
name = "hl-mem"
version = "0.11.0"
description = "Evidence-aware local memory service"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://github.com/lohr13/hl_mem"
Repository = "https://github.com/lohr13/hl_mem"
Changelog = "https://github.com/lohr13/hl_mem/blob/main/docs/CHANGELOG.md"

[project.scripts]
hl-mem = "hl_mem.cli:main"
hl-mem-worker = "hl_mem.workers.worker:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "benchmark: performance benchmarks excluded from default test discovery by file naming",
    "eval: offline evaluation tests that report metrics without enforcing quality thresholds",
]

[tool.coverage.run]
source = ["src/hl_mem"]

[tool.coverage.report]
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/hl_mem"]
